<resources>
    <string name="app_name">Shopping Cart App</string>
    <string name="email_hint">Email</string>
    <string name="pwd_hint">Password</string>
    <string name="add_btn">Add User</string>
    <string name="enter_info">Enter Email and Password</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="shopping_cart_png">Shopping cart png</string>
    <string name="sign_out">Sign Out</string>
    <string name="checkout">Checkout</string>
    <string name="change_item_quantity">Change Item Quantity:</string>
    <string name="update">Update</string>
    <string name="textview">TextView</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="submit_code">Submit Code</string>
    <string name="back_to_browse">Back To Browse</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="save_my_payment_information">Save my payment information</string>
    <string name="done">Done</string>
    <string name="mm_yy">MM/YY</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="_0_00">$0.00</string>
    <string name="edit_price">Edit Price</string>
    <string name="description">Description</string>
    <string name="desc">desc</string>
    <string name="edit_description">Edit Description</string>
    <string name="delete_item">Delete Item</string>
    <string name="profile">Profile</string>
    <string name="button">Button</string>
    <string name="order_history">Order History</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_card">Payment Card</string>
    <string name="back">Back</string>
    <string name="billing_address">Billing Address</string>
    <string name="promo_available">Promo Code Available</string>
</resources>
